<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle54"
    tools:context=".activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:background="@drawable/munalogofinal"
            android:layout_marginTop="@dimen/_30sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/your24hMonastore"
            android:layout_marginStart="@dimen/_48sdp"
            android:layout_marginEnd="@dimen/_48sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_below="@id/img_logo"
            android:id="@+id/T_textlogo"/>

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel_full_name"
            android:layout_below="@id/T_textlogo"
            android:layout_marginTop="@dimen/_33sdp"
            >

            <ImageView
                android:id="@+id/img_fullname"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/user"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/T_input_fullname"
                android:layout_width="match_parent"
                android:layout_toRightOf="@id/img_fullname"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:hint="@string/Full_Name"
                >

                <EditText
                    android:id="@+id/Et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="#706e6f"
                    android:backgroundTint="#706e6f"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel_phone"
            android:layout_below="@id/rel_full_name"
            android:layout_marginTop="@dimen/_10sdp"
            >

            <ImageView
                android:id="@+id/img_phone"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/phonecall"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/T_input_phone"
                android:layout_width="match_parent"
                android:layout_toRightOf="@id/img_phone"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:hint="@string/Phone"
                >

                <EditText
                    android:id="@+id/Et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="text"
                    android:textColor="#706e6f"
                    android:backgroundTint="#706e6f"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel_email"
            android:layout_below="@id/rel_phone"
            android:layout_marginTop="@dimen/_10sdp"
            >

            <ImageView
                android:id="@+id/mail_img"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/newemailoutline"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_text_email_input_layout"
                android:layout_width="match_parent"
                android:layout_toRightOf="@id/mail_img"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:hint="@string/Email"
                >

                <EditText
                    android:id="@+id/login_edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_10sdp"
                    android:inputType="textEmailAddress"
                    android:textColor="#706e6f"
                    android:backgroundTint="#706e6f"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel_password"
            android:layout_below="@+id/rel_email"
            android:layout_marginTop="@dimen/_10sdp"

            >
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/lock"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:id="@+id/pass_img"
                android:layout_centerVertical="true"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_toRightOf="@id/pass_img"
                android:layout_marginEnd="@dimen/_13sdp"
                android:hint="@string/Password"
                >

                <EditText
                    android:id="@+id/Et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#706e6f"
                    android:backgroundTint="#706e6f"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_32sdp"
            android:background="@drawable/login_btn"
            android:layout_marginTop="@dimen/_27sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_15sdp"
            android:textColor="#fff"
            android:layout_below="@id/rel_password"
            android:text="@string/Register"
            android:textAllCaps="false"
            />
    </RelativeLayout>



</ScrollView>